<resources>
    <string name="app_name">Learn German</string>
    <string name="category_phrases">Phrases</string>
    <string name="category_colors">Colors</string>
    <string name="category_family">Family Members</string>
    <string name="category_numbers">Numbers</string>
    <string name="category_days">Days</string>
    <string name="category_intro">Introduction</string>
    <string name="category_alpha">Alphabet</string>
    <string name="german">German</string>
    <string name="english">English</string>
</resources>